# Semantic-Segmentation-Guided-Neural-Video-Compression

./: Dockerfile  README.md  docker-compose.yaml  image_compression_config.yaml  lrz.md  pyproject.toml  requirements.txt  trainer_seg_video_model.py  video_compression_config.yaml
src/dataset/: datamodule.py  dataset_lightning.py  dataset_vimeo.py  seg_waymo_dataset.py  seg_waymo_dataset_lightning.py  seg_waymo_dataset_lightning_old.py  video_transform.py  waymo_dataset.py  waymo_dataset_lightning.py
src/layers/: inference.py  layers.py
src/models/: common_model.py  entropy_models.py  image_model.py  video_model.py
src/refactor/: common_model.py  config.py  entropy_models.py  image_model.py  image_model_old.py  mask_predictor.py  mask_prop_seg_video_model.py  seg_video_model.py  seg_video_model_fast.py  video_model.py
src/training/: csv_logging.py  image_logging.py  optimizers.py  training_utils.py
src/utils/: build_cache.py  common.py  visualize_helper.py
