[project]
name = "multimodalneuralvideocompression"
version = "0.1.0"
description = "Research Repo for Master Thesis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bd-metric>=0.9.0",
    "einops>=0.8.1",
    "lightning>=2.5.1.post0",
    "lightning-utilities>=0.14.3",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pybind11>=2.13.6",
    "rich>=14.0.0",
    "scipy>=1.15.3",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "torchmetrics>=1.7.3",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "protobuf<=3.20",
    "omegaconf>=2.3.0",
]
